--- a/Exercicios/ex022/fundo006.html
+++ b/Exercicios/ex022/fundo006.html
@@ -7,16 +7,25 @@
     <title>Fundos</title>
     <style>
         body {
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+
+            /*
+            shorthand = background
+            color > image > position > repeat > (size) > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat  fixed;
+            background-size: cover;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,6 +36,11 @@
 <body>
     <main> 
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod sapiente, eaque ullam repellat nemo quasi praesentium minus saepe voluptates qui cumque, sed exercitationem aliquam ipsam? Voluptatem, nam. Repudiandae, molestiae officia! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis asperiores veniam magnam adipisci! Unde corporis consequatur enim saepe quod! Provident obcaecati consequatur ab libero corrupti repellendus accusantium possimus ullam soluta.</p> 
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod sapiente, eaque ullam repellat nemo quasi praesentium minus saepe voluptates qui cumque, sed exercitationem aliquam ipsam? Voluptatem, nam. Repudiandae, molestiae officia! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis asperiores veniam magnam adipisci! Unde corporis consequatur enim saepe quod! Provident obcaecati consequatur ab libero corrupti repellendus accusantium possimus ullam soluta.</p> 
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod sapiente, eaque ullam repellat nemo quasi praesentium minus saepe voluptates qui cumque, sed exercitationem aliquam ipsam? Voluptatem, nam. Repudiandae, molestiae officia! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis asperiores veniam magnam adipisci! Unde corporis consequatur enim saepe quod! Provident obcaecati consequatur ab libero corrupti repellendus accusantium possimus ullam soluta.</p> 
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod sapiente, eaque ullam repellat nemo quasi praesentium minus saepe voluptates qui cumque, sed exercitationem aliquam ipsam? Voluptatem, nam. Repudiandae, molestiae officia! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis asperiores veniam magnam adipisci! Unde corporis consequatur enim saepe quod! Provident obcaecati consequatur ab libero corrupti repellendus accusantium possimus ullam soluta.</p> 
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod sapiente, eaque ullam repellat nemo quasi praesentium minus saepe voluptates qui cumque, sed exercitationem aliquam ipsam? Voluptatem, nam. Repudiandae, molestiae officia! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis asperiores veniam magnam adipisci! Unde corporis consequatur enim saepe quod! Provident obcaecati consequatur ab libero corrupti repellendus accusantium possimus ullam soluta.</p> <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod sapiente, eaque ullam repellat nemo quasi praesentium minus saepe voluptates qui cumque, sed exercitationem aliquam ipsam? Voluptatem, nam. Repudiandae, molestiae officia! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis asperiores veniam magnam adipisci! Unde corporis consequatur enim saepe quod! Provident obcaecati consequatur ab libero corrupti repellendus accusantium possimus ullam soluta.</p> 
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod sapiente, eaque ullam repellat nemo quasi praesentium minus saepe voluptates qui cumque, sed exercitationem aliquam ipsam? Voluptatem, nam. Repudiandae, molestiae officia! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis asperiores veniam magnam adipisci! Unde corporis consequatur enim saepe quod! Provident obcaecati consequatur ab libero corrupti repellendus accusantium possimus ullam soluta.</p> 
 
     </main>
