--- a/Exercicios/desafio012/index.html
+++ b/Exercicios/desafio012/index.html
@@ -22,7 +22,7 @@
             Mensagem curta e fria <br>
             Twitter e Facebook <br>
             Antes que eu caduque <br>
-            Vou dizer tudo em poesia. <br>
+            Vou dizer tudo em poesia. 
         </p>
     </section>
 
@@ -36,7 +36,7 @@
             O "O" e o "E" foi riscado <br>
             Para declarar o amor <br>
             Basta botar uma flor <br>
-            E um coração desenhado. <br>
+            E um coração desenhado. 
         </p>
     </section>
 
@@ -50,7 +50,7 @@
             Ou vai até no começo <br>
             Agora é .com <br>
             Se o saite é muito bom <br>
-            Ele vale um alto preço. <br>
+            Ele vale um alto preço. 
         </p>
         <p>
             Pra piorar a liguagem <br>
@@ -59,7 +59,7 @@
             Ponto e vírgula e um asterisco <br>
             Um beijo significa <br>
             Pra entender como fica <br>
-            Decifre esse rabisco. <br>
+            Decifre esse rabisco. 
         </p>
     </section>
 
@@ -73,7 +73,7 @@
             Só chegava no Verão <br>
             Mas matava a saudade <br>
             Era texto de verdade <br>
-            Nas linhas do coração. <br>
+            Nas linhas do coração. 
         </p>
     </section>
 
@@ -87,7 +87,7 @@
             A pessoa foi embora <br>
             Abriu outro aplicativo <br>
             O mundo ficou cativo <br>
-            Da tecnologia do agora. <br>
+            Da tecnologia do agora. 
         </p>
         <p>
             Felizmente, pra orar <br>
@@ -96,7 +96,7 @@
             Se quiser, faça esse teste <br>
             Dois pontos são dois joelhos <br>
             Seus lábios são aparelhos <br>
-            Deixe que Deus interprete. <br>
+            Deixe que Deus interprete. 
         </p>
     </section>
     <footer>
